# hunting-exoplanets-ai

./: README.md  app.py  predict_one.py  pyproject.toml  requirements.txt
app/: main.py
app/data/: Kepler.csv  processed_kepler.csv
app/models/: preprocessor.pkl
app/notebooks/: hunting_exoplanets.ipynb  hunting_exoplanets_notebook.ipynb
app/pages/: app.py  batch_prediction.py  single_predict.py  stats.py
app/utils/: model.py  preprocessing.py  preprocessor.py
notebooks/: train_model.ipynb
